@@ -1,4 +1,8 @@
 2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpprocessor.c:
+    Fixed bug: gpdasm does not recognize the PIC12E instructions.
+
+2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gputils/testsuite/gpdasm.project/op14e.asm,
     gputils/testsuite/gpdasm.project/op16e.asm:
     updated
